--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "5",
+    "@mui/material": "5",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
